--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "Aleksi",
+  "title": "Aleksi Sass",
   "version": "0.1.0",
   "description": "A collection of useful Sass functions and mixins.",
   "homepage": "https://github.com/yoannisj/aleksi",
