--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Aleksi",
+  "name": "sass-aleksi",
   "title": "Aleksi Sass",
-  "version": "0.1.0",
-  "description": "A collection of useful Sass functions and mixins.",
+  "version": "0.1.1",
+  "description": "A collection of Sass helper functions and mixins.",
   "homepage": "https://github.com/yoannisj/aleksi",
   "license": "MIT",
   "author": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yoannisj/aleksi/aleksi.git"
+    "url": "https://github.com/yoannisj/sass-aleksi.git"
   },
   "devDependencies": {
     "bootcamp": "^1.1.7",
