--- a/.sassdocrc
+++ b/.sassdocrc
@@ -5,6 +5,7 @@ groups:
   aleksi-settings: Settings
   aleksi-general: General
   aleksi-math: Math
+  aleksi-strings: Strings
   aleksi-lengths: Lengths
   aleksi-lists: Lists
   aleksi-maps: Maps
