--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "url": "https://github.com/yoannisj/sass-aleksi.git"
   },
   "devDependencies": {
-    "bootcamp": "^1.1.7",
     "grunt": "^0.4.5",
     "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "mocha": "^3.1.0",
+    "sass-true": "^2.1.3"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   }
 }
