--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "mocha": "^3.1.0",
+    "node-sass-import-once": "^1.2.0",
     "sass-true": "^2.1.3"
   },
   "scripts": {
