implement ‘map-set’, ‘map-set-deep’, ‘map-get-deep’, ‘memo-set’, ‘memo-has’ and ‘memo-get’ + remove dependency to ‘sassy-maps’ + cleanup

--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec",
     "test-rubysass": "./node_modules/sass-true/bin/true-cli ./test/test.scss"
-  }
+  },
+  "dependencies": {}
 }
