--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,6 @@
     "sassdoc"
   ],
   "dependencies": {
-    "SassyLists": "~2.2.4",
-    "sassy-maps": "^0.4.0"
+    "SassyLists": "~2.2.4"
   }
 }
