--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   "devDependencies": {
     "mocha": "^3.1.0",
     "node-sass-import-once": "^1.2.0",
+    "node-sass-import-once-read-sync": "^1.2.0",
     "sass-true": "^2.1.3"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec",
     "test-rubysass": "./node_modules/sass-true/bin/true-cli ./test/test.scss"
-  },
-  "dependencies": {}
+  }
 }
