--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "devDependencies": {
     "mocha": "^3.1.0",
+    "node-sass": "^4.5.3",
     "node-sass-import-once": "^1.2.0",
-    "sass-true": "^2.1.3"
+    "sass-true": "^3.0.0-beta.1"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec",
